# fmPlayer

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/fm/fmmedia/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/fm/fmmedia/: FmApplication.kt  MainActivity.kt  NewWordActivity.kt
app/src/main/java/com/fm/fmmedia/adapter/: WordListAdapter.kt
app/src/main/res/drawable/: empty_data.xml  record_video.xml  stop_record.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/test/java/com/fm/fmmedia/: ExampleUnitTest.kt
fmplayer/: build.gradle.kts
fmplayer/src/main/: AndroidManifest.xml
fmplayer/src/main/cpp/: CMakeLists.txt  ThreadSafeQueue.h  VideoEncoderManager.cpp  VideoEncoderManager.h  VideoPlayer.cpp  VideoPlayer.h  VideoPlayerManager.cpp  VideoPlayerManager.h  util.cpp  util.h  video.cpp
fmplayer/src/main/cpp/encoder/: FmEncoder.cpp  FmEncoder.h
fmplayer/src/main/cpp/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
fmplayer/src/main/cpp/jsoncpp/: CMakeLists.txt
fmplayer/src/main/cpp/player/: CallAVFrame.h  FmPlayer.cpp  FmPlayer.h  MediaCodecDecoder.cpp  MediaCodecDecoder.h  StreamFilter.cpp  StreamFilter.h  StreamInfo.cpp  StreamInfo.h  TestDecoder.cpp  TestDecoder.h  VideoCache.cpp  VideoCache.h  VideoDecoder.cpp  VideoDecoder.h
fmplayer/src/main/java/com/fm/fmplayer/: FmDecoder.java  FmPlayer.java  FmPlayerDataCallback.java  Md5.java  PlayerCallback.java
fmplayer/src/main/res/raw/: fmvideoshader.glsl  fmvideoshader20.glsl  fragmentshader20.glsl  imagevertexshader.glsl  imagevertexshader20.glsl  vertexshader.glsl  vertexshader20.glsl
fmplayer/src/main/res/values/: strings.xml  themes.xml
fmplayer/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
openglRender/: build.gradle.kts
openglRender/src/androidTest/java/com/fm/openglrender/: ExampleInstrumentedTest.kt
openglRender/src/main/cpp/: CMakeLists.txt  LoadModule.cpp  LoadModule.h  Log.h  opengl.cpp
openglRender/src/main/cpp/model/: animation.h  assimp_glm_helpers.h  bone.h  mesh.h  model.h  model_animation.h
openglRender/src/main/cpp/render/: MyGLRenderContext.cpp
openglRender/src/main/cpp/sample/: GLSampleBase.h  Model3DSample.cpp  Model3DSample.h
openglRender/src/main/java/com/fm/openglrender/: OpenglRender.java
openglRender/src/test/java/com/fm/openglrender/: ExampleUnitTest.kt
(+95 files in other folders)
